# rust-udiffx

./: .gitignore  Cargo.toml  README.md  other.txt
dev/future/: dev-chat-new-patches.md
dev/spec/: spec-concept.md  spec-patch-strategy.md
dev/specs/: spec-concept.md  spec-patch-strategy.md  spec-security.md
doc/for-llm/: api-reference-for-llm.md
docs/for-llm/: api-reference-for-llm.md
examples/: c01-extract.rs  c02-apply.rs
src/: applier.rs  applier_tests.rs  apply_changes_info.rs  apply_changes_status.rs  error.rs  extract.rs  file_changes.rs  file_directives.rs  files_context.rs  fs_guard.rs  hashline.rs  lib.rs  patch_completer.rs  patch_completer_tests.rs  security_policy.rs
src/patch_completer/: complete.rs  matchers.rs  mod.rs  parse.rs  types.rs
src/prompt/: mod.rs  prompt-file-changes.md  prompt-udiffx.md
tests/: tests_changes.rs  tests_patches.rs
tests/data/: changes-no-changes.md  changes-no-head-nums.md  changes-patch-mixed-actionable.md  changes-patch-unactionable-only.md  changes-simple.md  changes-with-code-fence.md
tests/data/test-patches/test-00-tmp/: changes.txt  original.txt
tests/data/test-patches/test-01-crlf/: changes.txt
tests/data/test-patches/test-02-append/: changes.txt
tests/data/test-patches/test-03-multi-hunks/: changes.txt
tests/data/test-patches/test-03-no-matching-empty-line/: original.txt
tests/data/test-patches/test-04-no-end-line/: changes.txt  original.txt
tests/data/test-patches/test-05-missplaced/: changes.txt  original.txt
tests/data/test-patches/test-06-no-match/: changes.txt  original.txt
tests/data/test-patches/test-07-new-line/: changes.txt  original.txt
tests/data/test-patches/test-08-missmatch/: changes.txt  original.txt
tests/test_support/: helpers.rs  mod.rs
(+27 files in other folders)
