[package]
name = "udiffx"
version = "0.1.7-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Parse and apply LLM-optimized unified diff + XML file changes"
homepage = "https://github.com/jeremychone/rust-udiffx"
repository = "https://github.com/jeremychone/rust-udiffx"
categories = [
  "development-tools",
  "parser-implementations",
  "filesystem"
]
keywords = [
  "diff",
  "patch",
  "unified-diff",
  "llm",
  "code-editing"
]

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[features]
test-support = []

[dependencies]
# -- Tracing
tracing = "0.1"
# -- Files
simple-fs = { version = "0.9.3" }
# -- Diff & Text
diffy = "0.4.2"
markex = { version = "0.1.0" }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }

[dev-dependencies]
udiffx = { path = ".", features = ["test-support"] }
assertables = "9"
